# recipebot

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
src/recipe_bot/: bot.rs  mod.rs  util.rs
src/recipe_bot/commands/: command.rs  details.rs  error.rs  mod.rs  search.rs
src/recipe_manager/: config.rs  factory.rs  implementations.rs  mod.rs  objects.rs  service_factory.rs  services.rs  traits.rs  utils.rs
src/recipe_manager/configuration/: config.rs  config_loader.rs  mod.rs
src/tests/: authenticationservice_test.rs  mocks.rs  mod.rs  webservice_test.rs
src/tests/commands/: details_test.rs  mod.rs  search_test.rs
src/web_api/: api.rs  implementations.rs  mod.rs  services.rs  user.rs  webscripts.rs
uml/: receipt_manager.txt
