[package]
name = "reciptmanagement"
version = "0.1.0"
authors = ["doenis <d.st@this.com>"]

[dependencies]
postgres = {version = "0.15",  features = ["with-native-tls"]}
serde_json = "1.0.4"
serde = "1.0.16"
serde_derive = "1.0.16"
rand = "0.3"
argon2rs = "0.2.5"
base64 = "0.6.0"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.12" }